# SelforganizedMultiRobotTaskPlanning

./: readme.md
autonomous_robot/: package.xml
autonomous_robot/msg/: RobotPosition.msg
autonomous_robot/src/: DriveSimulator.cpp  DriveSimulator.h  MutualExclusion.cpp  MutualExclusion.h  OfferManager.cpp  OfferManager.h  RAI.cpp  RAI.h  SharedFunctions.cpp  SharedFunctions.h  TaskDistributer.cpp  TaskDistributer.h  client.cpp  clientCollisionChecker.cpp  clientRandomTasks.cpp  clientRvizClick.cpp  clientTestDistribution.cpp  robot.cpp
autonomous_robot/src/CollisionPlanner/: CollisionPath.cpp  CollisionPath.h  CollisionPlanner.cpp  CollisionPlanner.h  Intersection.cpp  Intersection.h  Line.cpp  Line.h  LineElement.cpp  LineElement.h  LinearFunction.cpp  LinearFunction.h  Robot.cpp  Robot.h  Segment.cpp  Segment.h  SubPathPoint.cpp  SubPathPoint.h
autonomous_robot/srv/: AddNewTransportTask.srv  InformReachPoint.srv  ReceiveOffer.srv  ReceiveReachPoints.srv  RequestCurrentExecutionPath.srv
matlab_simulation/autonomous_robot/: Dynamisch.m  OfferManager.m  Parameter.mat  RAI.m  SharedFunctions.m  TaskDistributer.m  package.xml  taskClient.m  taskClient.mat
matlab_simulation/autonomous_robot/msg/: TransportTask.msg
matlab_simulation/autonomous_robot/srv/: AddNewTransportTask.srv  ReceiveCounterOffer.srv  ReceiveFinishedTask.srv  RequestMutualExclusion.srv  ResultAutomation.srv  RobotReady.srv
matlab_simulation/staticTaskAllocation/: Parameter.mat  RAI.m  Simulation.m  staticTaskAllocation.m
staticTaskAllocation/src/: Main.java  RAI.java  RAIResult.java  Robot.java  TransportTask.java
