<?xml version="1.0"?>
<package format="1">
  <name>autonomous_robot</name>
  <version>0.0.0</version>
  <description>A package for robots to autonomously handle transport tasks</description>


  
  <maintainer email="annaivanov1998@gmail.com">anna</maintainer>
  <license>TODO</license>

  
    <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
 
    <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- Used for generation for msg and srv -->
  <build_depend>message_generation</build_depend>

  <!--<buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <export>


  </export> -->
</package>
